Closed Bug 1780643 Opened 2 years ago Closed 2 years ago

`ffi::WGPUIdentityRecyclerFactory` is not properly initialized

Categories

(Core :: Graphics: WebGPU, defect, P3)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox105 --- fixed

People

(Reporter: jimb, Assigned: jimb)

Details

Attachments

(1 file)

mozilla::webgpu::MakeFactory neglects to initialize the free_query_set member of the mozilla::webgpu::ffi::WGPUIdentityRecyclerFactory that it returns. Fortunately, Firefox has no support for WebGPU query sets yet, so this field is unused. However, for the future, we should zero-initialize the struct so that any function pointers left uninitialized will definitely crash if used.

Assignee: nobody → jimb
Status: NEW → ASSIGNED
Pushed by jblandy@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e353260f5040
Fully initialize ffi::WGPUIdentityRecyclerFactory. r=nical
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: