Bug 1780643: Fully initialize ffi::WGPUIdentityRecyclerFactory. r=nical

Differential Revision: https://phabricator.services.mozilla.com/D152450